2001-07-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (pop_menu_up):
	fixed calculations that force a menu on screen w/ Xinerama

	* fvwm/move_resize.c (DoSnapAttract):
	removed some code that slipped in with xinerama patch and broke
	vertical SnapAttraction

	* fvwm/virtual.c (CMD_EdgeResistance):
	removed debug code

	* libs/XineramaSupport.c (XineramaSupportClipToScreen):
	take reference position src_x/src_y to determine screen

	* fvwm/windowlist.c (CMD_WindowList):
	* fvwm/menus.c (get_menu_options):
	(get_popup_options):
	(MenuInteraction):
	(pop_menu_up):
	handle Xinerama screens for positioning menus w/ posthints

	* fvwm/menus.c (get_menu_options):
	renamed function
	fix for icon/window context rectangle when window is in wrong state

2001-07-22  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	s/XINERAMA/HAVE_XINERAMA/, now #ifdef'd xinerama code is finally ever
	compiled in; fixed linking by adding -lXinerama; small corrections

2001-07-22  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm2.1: Remove some test code, fix remaining .IP commands.

2001-07-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/XineramaSupport.c (XineramaSupportInit):
	added xinerama emulation for developers

	* fvwm/virtual.c (CMD_XineramaEnable):
	(CMD_XineramaDisable):
	* fvwm/module_interface.c (BroadcastConfigInfoString):
	added function to communicate Xinerama on/off to modules

	* fvwm/module_interface.c:
	include time.h to fix warning
	* libs/XineramaSupport.c:
	* fvwm/fvwm.c (setVersionInfo):
	* fvwm/Makefile.am:
	* configure.in:
	* acconfig.h:
	cleanded up xinerama detection
	added shape detection

2001-07-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm2.1:
	Added Xinerama introduction

	* fvwm/fvwm.c (setVersionInfo):
	print xinerama support

	* fvwm/conditional.c (CreateConditionMask):
	added CirculateHitShaded option for conditional commands that was
	described in the man page but not implemented

	* fvwm/fvwm.h (WindowConditionMask):