@@ -1,3 +1,8 @@
+2001-07-23  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/windowlist.c (CMD_WindowList):
+	fixed windowlist placement w/ Xinerama
+
 2001-07-22  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/menus.c (pop_menu_up):
